--- a/Flickr/Base.lproj/Main.storyboard
+++ b/Flickr/Base.lproj/Main.storyboard
@@ -22,15 +22,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qdc-1L-zSv">
-                                <rect key="frame" x="16" y="64" width="375" height="667"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="210" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qdc-1L-zSv">
+                                <rect key="frame" x="16" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qdc-1L-zSv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="0jr-Th-bMD"/>
-                            <constraint firstItem="qdc-1L-zSv" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="4Oj-cM-jI4"/>
+                            <constraint firstItem="qdc-1L-zSv" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" constant="-100" id="4Oj-cM-jI4"/>
                             <constraint firstItem="qdc-1L-zSv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8p9-BS-QEf"/>
                             <constraint firstItem="qdc-1L-zSv" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="GKg-IG-YLv"/>
                         </constraints>
