--- a/Flickr/FlickrItemDetailPhotoTableViewCell.xib
+++ b/Flickr/FlickrItemDetailPhotoTableViewCell.xib
@@ -11,24 +11,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="248" id="FK6-vn-30z" customClass="FlickrItemTableViewCell" customModule="Flickr" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="248"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="198" id="Exr-Kn-YLe" customClass="FlickrItemDetailPhotoTableViewCell" customModule="Flickr" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="198"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FK6-vn-30z" id="aIy-oB-x02">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="247"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Exr-Kn-YLe" id="fUp-JR-oVx">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="197.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g5m-Lk-HZJ">
-                        <rect key="frame" x="8" y="8" width="359" height="232"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wbv-LL-aI0">
+                        <rect key="frame" x="8" y="8" width="359" height="182"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="flickrItemImageView" destination="g5m-Lk-HZJ" id="WtE-03-Pue"/>
+                <outlet property="flickrItemImageView" destination="wbv-LL-aI0" id="jbH-mH-ESq"/>
             </connections>
-            <point key="canvasLocation" x="25.5" y="-19"/>
+            <point key="canvasLocation" x="55.5" y="148"/>
         </tableViewCell>
     </objects>
 </document>
