--- a/Flickr/Base.lproj/Main.storyboard
+++ b/Flickr/Base.lproj/Main.storyboard
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="V1u-Yh-yZ0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="V1u-Yh-yZ0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Flickr Feed View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="Flickr" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="FlickrFeedViewController" customModule="Flickr" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,22 +22,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="210" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qdc-1L-zSv">
-                                <rect key="frame" x="16" y="64" width="375" height="603"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="x05-Xu-h5G">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qq7-T3-fQH">
+                                    <size key="itemSize" width="154" height="121"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="OSa-PI-ghf">
+                                        <rect key="frame" x="0.0" y="0.0" width="154" height="121"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="154" height="121"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qdc-1L-zSv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="0jr-Th-bMD"/>
-                            <constraint firstItem="qdc-1L-zSv" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" constant="-100" id="4Oj-cM-jI4"/>
-                            <constraint firstItem="qdc-1L-zSv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8p9-BS-QEf"/>
-                            <constraint firstItem="qdc-1L-zSv" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="GKg-IG-YLv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="x05-Xu-h5G" secondAttribute="bottom" id="ELS-29-pP9"/>
+                            <constraint firstItem="x05-Xu-h5G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FSO-zp-t7u"/>
+                            <constraint firstItem="x05-Xu-h5G" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IlZ-6J-eag"/>
+                            <constraint firstAttribute="trailing" secondItem="x05-Xu-h5G" secondAttribute="trailing" id="hAl-b0-3gr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="mAw-vN-CYV"/>
                     <connections>
-                        <outlet property="tableView" destination="qdc-1L-zSv" id="bxH-bb-SQI"/>
+                        <outlet property="collectionView" destination="x05-Xu-h5G" id="cw4-Ge-U9S"/>
                         <segue destination="qM1-jw-HgZ" kind="show" identifier="showDetail" id="DU1-29-dRq"/>
                     </connections>
                 </viewController>
@@ -84,7 +100,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="V1u-Yh-yZ0" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="x01-l2-oNZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
